--- a/Day-15-of-100/app/src/main/res/values/strings.xml
+++ b/Day-15-of-100/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Day 15 of 100</string>
+    <string name="title_activity_list_translation">ListTranslationActivity</string>
 </resources>
